--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,26 +1,10 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import 'tailwindcss/base';
+@import 'base/site.css';
+@import 'base/font.css';
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import 'tailwindcss/components';
 
-* {
-  box-sizing: border-box;
-}
+@import 'tailwindcss/utilities';
+@import 'utilities/markdown.css';
+@import 'utilities/utils.css';
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
